[package]
name = "navigator-rs"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "This crate serves as the entry point for embedding applications using Rust on Blue Robotics's Navigator"
homepage = "https://bluerobotics.com/store/comm-control-power/control/navigator/"
documentation = "https://docs.bluerobotics.com/navigator-rs/navigator_rs/"
repository = "https://github.com/bluerobotics/navigator-rs"
categories = ["BlueRobotics", "Embedded development", "Science"]
keywords = ["BlueRobotics", "embedded", "navigator", "robotics", "ROV"]
readme = "README.md"

[dependencies]
ads1x1x = "0.2.2"
ak09915_rs= "0.1.1"
bmp280 = "0.4.0"
embedded-hal = "0.2.7"
env_logger = "0.10.0"
icm20689 = "0.1.1"
linux-embedded-hal = "0.3.2"
log = "0.4.19"
nb = "1.1.0"
pwm-pca9685 = "0.3.1"
