[package]
name = "navigator-rs"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "This crate serves as the entry point for embedding applications using Rust on Blue Robotics's Navigator"
homepage = "https://bluerobotics.com/store/comm-control-power/control/navigator/"
repository = "https://github.com/bluerobotics/navigator-rs"
categories = ["science::robotics", "embedded", "hardware-support"]
keywords = ["BlueRobotics", "embedded", "navigator", "robotics", "ROV"]
readme = "README.md"

[dependencies]
ads1x1x = { git = "https://github.com/eldruin/ads1x1x-rs" }
ak09915_rs = { git = "https://github.com/bluerobotics/AK09915-rs" }
approx = "0.5.1"
bmp180-driver = "0.1.1"
bmp180-embedded-hal = { version = "0.1.0", features = ["blocking"] }
bmp280 = "0.4.0"
dummy-pin = "1.0.0"
embedded-hal = "1.0.0"
ftdi = "0.1.3"
ftdi-embedded-hal = "0.22.1"
icm20689 = { git = "https://github.com/tstellanova/icm20689" }
linux-embedded-hal = "0.4.0"
log = "0.4.19"
mpu6050 = { git = "https://github.com/patrickelectric/mpu6050", rev = "0fe2526" }
nb = "1.1.0"
qmc5883l = { git = "https://github.com/patrickelectric/qmc5883l", ref = "62b8a64" }
pwm-pca9685 = "1.0.0"
sk6812_rpi = "0.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
